--- a/Controls/PhonePadButton.xaml
+++ b/Controls/PhonePadButton.xaml
@@ -3,13 +3,13 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	mc:Ignorable="d"
+	xmlns:Controls="clr-namespace:FSClient.Controls" mc:Ignorable="d"
 	x:Class="FSClient.Controls.PhonePadButton"
 	x:Name="UserControl"
 	Width="30" Height="30">
 
 	<Grid x:Name="LayoutRoot">
-		<Button Style="{DynamicResource GlassButtonStyle}" Foreground="White" x:Name="btn">
+		<Button Style="{DynamicResource GlassButtonStyle}" Foreground="White" x:Name="btn" TabIndex="{Binding Path=TabIndex, RelativeSource={RelativeSource AncestorType={x:Type Controls:PhonePadButton}}}">
 			<StackPanel Width="Auto">
 				<TextBlock x:Name="lblNumber" FontSize="12" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,-2,0,0" Text="5"/>
 				<TextBlock x:Name="lblLetters" FontSize="7" HorizontalAlignment="Center" Foreground="#FFC2B4B4" FontWeight="Bold" Width="24.388" TextAlignment="Center" RenderTransformOrigin="0.5,0.5" Margin="0,-2,0,0" >
