--- a/InputBox.xaml
+++ b/InputBox.xaml
@@ -9,14 +9,14 @@
 			<RowDefinition Height="35" />
 		</Grid.RowDefinitions>
 		<Label Name="lblDesc" Grid.Row="0"/>
-		<TextBox Name="txtInput" Grid.Row="1" Margin="10" KeyUp="txtInput_KeyUp" />
+		<TextBox Name="txtInput" Grid.Row="1" Margin="10" />
 		<Grid Grid.Row="2">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition />
 				<ColumnDefinition />
 			</Grid.ColumnDefinitions>
-			<Button Content="Ok" Width="75" Grid.Column="0" HorizontalAlignment="Left" Name="btnOk"  Margin="5" Click="btnOk_Click" />
-			<Button Content="Cancel" Width="75" HorizontalAlignment="Right" Margin="5" Grid.Column="1" Name="btnCancel" Click="btnCancel_Click" />
+			<Button Content="Ok" Width="75" Grid.Column="0" HorizontalAlignment="Left" Name="btnOk"  Margin="5" Click="btnOk_Click" IsDefault="True" />
+			<Button Content="Cancel" Width="75" HorizontalAlignment="Right" Margin="5" Grid.Column="1" Name="btnCancel" Click="btnCancel_Click" IsCancel="True" />
 			
 
 		</Grid>
